# conda-project

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  environment.yml  mypy.ini  pyproject.toml  setup.cfg  setup.py  versioneer.py  virtual-packages.yaml
.github/: disclaimer.txt
.github/workflows/: docs.yml  main.yaml
conda.recipe/: meta.yaml
conda_project/: __init__.py  __main__.py  _version.py  cli.py  conda.py  exceptions.py  project.py  project_file.py  utils.py
conda_project/cli/: __init__.py  commands.py  main.py  prepare.py
docs/: Makefile  requirements.txt
docs/source/: conf.py  config.md  experimental.md  index.md  setup_for_development.md  tutorial.md  user_guide.md
etc/: build-environment.yml  test-environment.cl2.yml  test-environment.cl3.yml  test-environment.yml
examples/: .gitignore  README.md
examples/cmds-and-vars/: README.md  conda-lock.default.yml  conda-project.yml
examples/condarc-settings/: README.md  environment.yml
examples/env-file-only/: README.md  environment.yml
examples/minimal/: .condarc  environment.yml
examples/multi-env-files/: README.md  conda-lock.test.yml  conda-project.yml  environment.yml  extras.yml  print_version.py  test_get_version.py
s2i/: Dockerfile  Makefile
s2i/entrypoints/: entrypoint.sh
s2i/examples/versions/: conda-project.yml
s2i/tests/: build-and-run.sh
s2i/tests/default-cmd/: conda-lock.default.yml  conda-project.yml  environment.yml
scripts/: ap-to-cp.py
src/conda_project/: __init__.py  __main__.py  _conda_lock.py  conda.py  exceptions.py  project.py  project_file.py  utils.py
src/conda_project/cli/: commands.py  main.py
tests/: __init__.py  conftest.py  test_archive.py  test_cli.py  test_commands.py  test_conda.py  test_dependencies.py  test_init.py  test_install.py  test_lock.py  test_project.py  test_project_file.py  test_utils.py
